--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "autoprefixer": "^10.2.1",
     "browser-sync": "^2.26.12",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-terser": "^2.0.1",
+    "postcss": "^8.2.4",
+    "postcss-csso": "^5.0.0",
+    "postcss-import": "^14.0.0"
   }
 }
